[gd_scene load_steps=11 format=3 uid="uid://lbfim0dhriqs"]

[ext_resource type="Script" uid="uid://dou75ry1nsy8n" path="res://board/board.gd" id="1_5c38k"]
[ext_resource type="PackedScene" uid="uid://qrsqqjj4etw3" path="res://board/placement/place_target.tscn" id="2_k4dee"]

[sub_resource type="CircleShape2D" id="CircleShape2D_k4dee"]
radius = 8.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_4mug4"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_4mug4"]
friction = 0.3
bounce = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4mug4"]
size = Vector2(1.0000001, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_4mug4"]
radius = 96.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mu6qt"]
size = Vector2(704, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k4dee"]
size = Vector2(704, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vj8kq"]
size = Vector2(704, 96)

[node name="Board" type="Node2D"]
script = ExtResource("1_5c38k")

[node name="MouseFollower" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseFollower"]
shape = SubResource("CircleShape2D_k4dee")

[node name="PlaceTarget" parent="." instance=ExtResource("2_k4dee")]

[node name="Top" type="Sprite2D" parent="."]
position = Vector2(511.99997, 32)
scale = Vector2(1023.9999, 64)
texture = SubResource("PlaceholderTexture2D_4mug4")

[node name="StaticBody2D" type="StaticBody2D" parent="Top"]
position = Vector2(0, -1)
physics_material_override = SubResource("PhysicsMaterial_4mug4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top/StaticBody2D"]
position = Vector2(5.9604645e-08, 1.0000001)
rotation = -3.1415925
shape = SubResource("RectangleShape2D_4mug4")

[node name="Left" type="Sprite2D" parent="."]
position = Vector2(32, 512)
scale = Vector2(64, 1024)
texture = SubResource("PlaceholderTexture2D_4mug4")

[node name="StaticBody2D" type="StaticBody2D" parent="Left"]
position = Vector2(0, -1)
physics_material_override = SubResource("PhysicsMaterial_4mug4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left/StaticBody2D"]
position = Vector2(5.9604645e-08, 1.0000001)
rotation = -3.1415925
shape = SubResource("RectangleShape2D_4mug4")

[node name="Bottom" type="Sprite2D" parent="."]
position = Vector2(511.99997, 992)
scale = Vector2(1023.9999, 64)
texture = SubResource("PlaceholderTexture2D_4mug4")

[node name="StaticBody2D" type="StaticBody2D" parent="Bottom"]
position = Vector2(0, -1)
physics_material_override = SubResource("PhysicsMaterial_4mug4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom/StaticBody2D"]
position = Vector2(5.9604645e-08, 1.0000001)
rotation = -3.1415925
shape = SubResource("RectangleShape2D_4mug4")

[node name="Right" type="Sprite2D" parent="."]
position = Vector2(992, 512)
scale = Vector2(64, 1024)
texture = SubResource("PlaceholderTexture2D_4mug4")

[node name="StaticBody2D" type="StaticBody2D" parent="Right"]
position = Vector2(0, -1)
physics_material_override = SubResource("PhysicsMaterial_4mug4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right/StaticBody2D"]
position = Vector2(5.9604645e-08, 1.0000001)
rotation = -3.1415925
shape = SubResource("RectangleShape2D_4mug4")

[node name="TopLeftPocket" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopLeftPocket"]
position = Vector2(64, 64)
shape = SubResource("CircleShape2D_4mug4")

[node name="TopRightPocket" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopRightPocket"]
position = Vector2(960, 64)
shape = SubResource("CircleShape2D_4mug4")

[node name="BottomRightPocket" type="Area2D" parent="."]
position = Vector2(0, 896)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomRightPocket"]
position = Vector2(960, 64)
shape = SubResource("CircleShape2D_4mug4")

[node name="BottomLeftPocket" type="Area2D" parent="."]
position = Vector2(0, 1792)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomLeftPocket"]
position = Vector2(64, -832)
shape = SubResource("CircleShape2D_4mug4")

[node name="TopLand" type="Area2D" parent="."]
position = Vector2(160, 64)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopLand"]
position = Vector2(352, 48)
shape = SubResource("RectangleShape2D_mu6qt")

[node name="LeftExtra" type="CollisionPolygon2D" parent="TopLand"]
polygon = PackedVector2Array(0, 96, -24, 72, 0, 24)

[node name="RightExtra" type="CollisionPolygon2D" parent="TopLand"]
polygon = PackedVector2Array(704, 96, 728, 72, 704, 24)

[node name="RightLand" type="Area2D" parent="."]
position = Vector2(272, 248)
rotation = 1.5707964
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightLand"]
position = Vector2(263.99997, -640)
shape = SubResource("RectangleShape2D_k4dee")

[node name="TopExtra" type="CollisionPolygon2D" parent="RightLand"]
position = Vector2(-88.00009, -688)
polygon = PackedVector2Array(0, 96, -24, 72, 0, 24)

[node name="BottomExtra" type="CollisionPolygon2D" parent="RightLand"]
polygon = PackedVector2Array(615.99994, -592.00006, 639.99994, -616.00006, 615.99994, -664.00006)

[node name="BottomLand" type="Area2D" parent="."]
position = Vector2(152, 128)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomLand"]
position = Vector2(360, 784)
shape = SubResource("RectangleShape2D_vj8kq")

[node name="RightExtra" type="CollisionPolygon2D" parent="BottomLand"]
position = Vector2(712, 832)
rotation = 3.1415927
polygon = PackedVector2Array(0, 96, -24, 72, 0, 24, 0, 76.49997)

[node name="LeftExtra" type="CollisionPolygon2D" parent="BottomLand"]
polygon = PackedVector2Array(-16, 760, 8, 808, 8, 736)

[node name="LeftLand" type="Area2D" parent="."]
position = Vector2(-528, 248)
rotation = 1.5707964
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftLand"]
position = Vector2(263.99997, -640)
shape = SubResource("RectangleShape2D_k4dee")

[node name="BottomExtra" type="CollisionPolygon2D" parent="LeftLand"]
position = Vector2(616, -592)
rotation = 3.1415927
polygon = PackedVector2Array(0, 96, -24, 72, 0, 24, 0, 76.49997)

[node name="TopExtra" type="CollisionPolygon2D" parent="LeftLand"]
polygon = PackedVector2Array(-88.00003, -688, -112.00003, -664, -88.00003, -616)

[connection signal="area_entered" from="MouseFollower" to="." method="_on_mouse_follower_area_entered"]
[connection signal="area_exited" from="MouseFollower" to="." method="_on_mouse_follower_area_exited"]
